dataset1235/2025-2/2868285114/users/1760111885/executions/3071719669_4204267109.log
== RUN (2025-08-28 22:31:57)
-- CODE: 
peso_gramas=float(input)))
quantidade_diaria_gramas=float(input())

umasemana = quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:09)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas=float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:31:30)
-- CODE: 
peso_gramas=float(input)))
quantidade_diaria_gramas=float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:30:43)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:00)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())

#3serao 1 semana, ent precisa descobrir quanto restara em

umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:57)
-- CODE: 
peso_gramas=float(input)))
quantidade_diaria_gramas=float(input())

umasemana = quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:19)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:30:05)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())

#3serao 1 semana, ent precisa descobrir quanto restara em

umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:30:30)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:43)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:31:08)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas=float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:32:38)
-- CODE: 
peso_gramas=float(input())
quantidade_diaria_gramas=float(input())

umasemana=quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
8880.58
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
841.94
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
859.5633
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
791.86
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
1942.19
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
7859.5633
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:41)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:31)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:32)
-- CODE: 
peso_gramas=float(input)))
quantidade_diaria_gramas=float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:32:40)
-- CODE: 
peso_gramas=float(input())
quantidade_diaria_gramas=float(input())

umasemana=quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
8880.58
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
841.94
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
859.5633
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
791.86
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
1942.19
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
7859.5633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:42)
-- CODE: 
peso_gramas=float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas=float(input)))
                            ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:07)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())

#3serao 1 semana, ent precisa descobrir quanto restara em

umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:30:18)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())



umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:15:58)
-- CODE: 
pesoSaco = float(input())
quantidadeD = float(input())

resto = pesoSaco%quantidadeD

print (round(resto,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
17.28
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
37.4
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
14.9433
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
17.56
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
12.56
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
16.6633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:00)
-- CODE: 
peso_gramas = float(input)))
quant_diaria_gramas = float(input())

#3serao 1 semana, ent precisa descobrir quanto restara em

umasemana = quant_diaria_gramas*7

resto=peso_gramas-umasemana
print(round(resto,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 1
    peso_gramas = float(input)))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
